@@ -10,6 +10,6 @@ ifeq ($(subdir),stdlib)
 sysdep_routines += __start_context
 endif
 
-ifeq ($(subdir),stdlib)
+ifeq ($(subdir),csu)
 gen-as-const-headers += ucontext_i.sym
 endif
