@@ -18,6 +18,8 @@ oRSP		mreg (RSP)
 oRBX		mreg (RBX)
 oR8		mreg (R8)
 oR9		mreg (R9)
+oR10		mreg (R10)
+oR11		mreg (R11)
 oR12		mreg (R12)
 oR13		mreg (R13)
 oR14		mreg (R14)
@@ -28,6 +30,7 @@ oRDX		mreg (RDX)
 oRAX		mreg (RAX)
 oRCX		mreg (RCX)
 oRIP		mreg (RIP)
+oEFL		mreg (EFL)
 oFPREGS		mcontext (fpregs)
 oSIGMASK	ucontext (uc_sigmask)
 oFPREGSMEM	ucontext (__fpregs_mem)
